@@ -1,4 +1,5 @@
 0.05
+ - Rewrite Select to use of tags_value() and tags_boolean() helpers.
 
 0.04 2024-02-05T11:50:12+01:00
  - Add tests for form.
